--- a/src/app/form/form.component.css
+++ b/src/app/form/form.component.css
@@ -2,3 +2,22 @@ button{
     background-color: #fa7f25;
     border-color: #fa7f25;
 }
+
+#results{
+    margin: 2px;
+    
+}
+
+
+.no-style .ng-valid {
+    border-left: 1px  solid #CCC
+  }
+  
+.no-style .ng-invalid {
+    border-left: 1px  solid #CCC
+  }
+
+#input{
+    margin: 13px;
+    width: auto;
+}  
